# openai-url-harvester

./: .gitattributes  .gitignore  DIFF_REPORT.md  Final-LFS-Push.ps1  OAUTH_TOKEN_SCOPE_FIX.md  PROJECT_INSTRUCTIONS.md  Push-AllLFSMigrations.ps1  Push-RemainingLFS.ps1  README.md  Test-OAuthScope.ps1  allowlist.txt  pyproject.toml  requirements.txt  seed_urls.txt  url_crawl.py
.github/: COPILOT_VALIDATION.md  MCP_SETUP.md  README.md  copilot-instructions.md
.github-backup/: copilot-instructions.yml
.github-backup/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github-backup/collections/: crawler.collection.yml
.github-backup/workflows/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/chatmodes/: Azure.chatmode.md  Harvester.chatmode.md  ReleaseManager.chatmode.md
.github/collections/: crawler.collection.yml
.github/instructions/: azure.rules.instructions.md  openai-url-harvester.instructions.md
.github/prompts/: awesome-copilot-search.prompt.md  azure-best-practices.prompt.md  crawl-debug.prompt.md  crawl-quality-report.prompt.md  mcp-manage.prompt.md
.github/workflows/: ci.yml
docs/: index.md
src/aiolimiter/: __init__.py
src/openai_url_harvester/: __init__.py  __main__.py  crawl.py  extract.py  sitemap.py  utils.py
tests/: test_crawler.py
